# py2nb

./: README.md  pyproject.toml
py2nb/: converter.py
py2nb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
vscode-extension/: .vscodeignore  LICENSE  PUBLISH.md  README.md  extension.js  package.json  py2nb-0.1.0.vsix
vscode-extension/py2nb/: __init__.py  cli.py
